# Mandelbrot

./: .clang-format  .gitignore  CMakeLists.txt  ConanHelper.cmake  README.md  conanfile.txt
CMake/: ConanPackageSetup.cmake
mac/Mandelbrot/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
mac/Mandelbrot.xcodeproj/: project.pbxproj
mac/Mandelbrot/Base.lproj/: Main.storyboard
mac/MandelbrotTests/: MandelbrotTests.m
source/: CMakeLists.txt
source/app/: CMakeLists.txt  main.cpp
source/cli/: main.cpp
source/image/: types.h  utils.h
source/include/: CMakeLists.txt
source/include/image/: types.h  utils.h
source/mandelbrot/: mandelbrot.h
source/test/: CMakeLists.txt  mandelbrot_test.cpp
